<resources>
    <string name="app_name">Anshu Note App</string>
    
    <!-- Firebase -->
    <string name="default_web_client_id">76111886985-your_web_client_id.apps.googleusercontent.com</string>
    
    <!-- Authentication -->
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="signing_in">Signing in...</string>
    <string name="signing_out">Signing out...</string>
    <string name="welcome_message">Welcome to Anshu Note App</string>
    <string name="please_sign_in">Please sign in to access your notes</string>
    
    <!-- Notes -->
    <string name="my_notes">My Notes</string>
    <string name="create_note">Create Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="save">Save</string>
    <string name="saving">Saving...</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="no_notes">No notes yet. Create your first note!</string>
    <string name="loading_notes">Loading notes...</string>
    
    <!-- Messages -->
    <string name="note_created">Note created successfully</string>
    <string name="note_updated">Note updated successfully</string>
    <string name="note_deleted">Note deleted successfully</string>
    <string name="error_creating_note">Error creating note</string>
    <string name="error_updating_note">Error updating note</string>
    <string name="error_deleting_note">Error deleting note</string>
    <string name="error_loading_notes">Error loading notes</string>
    <string name="error_network">Network error. Please check your connection.</string>
    <string name="error_auth">Authentication error. Please sign in again.</string>
    
    <!-- Validation -->
    <string name="title_required">Title is required</string>
    <string name="content_required">Content is required</string>
    <string name="title_too_long">Title must be 200 characters or less</string>
    
    <!-- Confirmation -->
    <string name="confirm_delete">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- User Info -->
    <string name="user_email">Email: %s</string>
    <string name="user_name">Name: %s</string>
</resources>